--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,45 +1,39 @@
-name: CI/CD Pipeline
+name: check build
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - [main]
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - [main]
 
 jobs:
-  test:
+  test-build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: ['14']
     steps:
-      - uses: actions/checkout@v4
-      
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
         with:
-          node-version: 18
-          cache: 'npm'
-      
-      - name: Install dependencies
-        run: npm ci # More reliable than npm install
-      
-      - name: Run tests
-        run: npm test
-        env:
-          CI: true # Important for test runners
+          node-version: ${{ matrix.node }}
+      - run: npm install
+      - run: npm run build
 
-  deploy:
-    needs: test
+  check-code:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    strategy:
+      matrix:
+        node: ['14']
+    name: Prettier on Node ${{ matrix.node }}
     steps:
-      - uses: actions/checkout@v4
-      
-      - name: Install Vercel CLI
-        run: npm install -g vercel@latest
-      
-      - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v25
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
         with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          vercel-args: '--prod' # Add this if you want production deployment
+          node-version: ${{ matrix.node }}
+      - run: npm install
+      - run: npm run prettier:check
+      - run: npm run eslint --ext .ts ./src
+      - run: npm run test 
