--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,39 +1,32 @@
-name: check build
+# .github/workflows/main.yml
+
+name: CI/CD Pipeline
 
 on:
   push:
-    branches:
-      - [main]
+    branches: [main]
   pull_request:
-    branches:
-      - [main]
+    branches: [main]
 
 jobs:
-  test-build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node: ['14']
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node }}
-      - run: npm install
-      - run: npm run build
+  build:
 
-  check-code:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node: ['14']
-    name: Prettier on Node ${{ matrix.node }}
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node }}
-      - run: npm install
-      - run: npm run prettier:check
-      - run: npm run eslint --ext .ts ./src
-      - run: npm run test 
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Run tests
+      run: npm test
+
+    - name: Build project
+      run: npm run build
